# django_rest_api_practice

./: .gitignore  Pipfile  README.md  build.sh  manage.py  pyproject.toml
api_server/: exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
api_server/migrations/: 0001_initial.py  0002_alter_stdcoursestatus_unique_together.py  0003_coursesinfo_final_grade.py
core/migrations/: 0001_initial.py
image_text_recoginize/: asgi.py  settings.py  urls.py  wsgi.py
